--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <!-- 个人信息部分 -->
         <div class="personal-info">
-            <h1>John Doe</h1>
-            <h2>Software Engineer</h2>
-            <p>john.doe@example.com</p>
+            <h1>王思棋</h1>
+            <h2>Mechanical Engineer</h2>
+            <p>wsqqq7985e@gmail.com</p>
         </div>
 
         <!-- 教育背景 -->
