--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
         <!-- 教育背景 -->
         <div class="section">
             <h3>Education</h3>
-            <p>B.S. in Computer Science, XYZ University</p>
-            <p>M.S. in Artificial Intelligence, ABC University</p>
+            <p>B.S. in Mechanical Design and Automation, Jhut University</p>
+            <p>M.S. in Mechanical Engineer, Whut University</p>
         </div>
 
         <!-- 工作经验 -->
         <div class="section">
             <h3>Experience</h3>
-            <p>Software Engineer at DEF Corp (2015 - 2020)</p>
-            <p>Senior Developer at GHI Inc (2020 - Present)</p>
+            <p>Software Engineer at smart car team of Jhut (2015 - 2020)</p>
+            <!-- <p>Senior Developer at GHI Inc (2020 - Present)</p> -->
         </div>
 
         <!-- 技能 -->
         <div class="section">
             <h3>Skills</h3>
-            <p>Python, C++, Java, SQL, Machine Learning, Data Analysis</p>
+            <p>Python, C , Machine Learning, keil, matlab, solidworks </p>
         </div>
     </div>
 </body>
